<resources>
    <string name="app_name">HeroesCatalogue</string>
    <string name="heroesList">Equipos</string>
    <string name="avengersName">The Avengers</string>
    <string name="avengersCreators">Stan Lee; Jack Kirby</string>
    <string name="XMenName">X-Men</string>
    <string name="XMenCreators">Stan Lee; Jack Kirby</string>
    <string name="FantasticFourName">Fantastic Four</string>
    <string name="FantasticFourCreators">Stan Lee; Jack Kirby</string>
    <string name="GuardiansGalaxyName">The Guardians Of The Galaxy</string>
    <string name="GuardiansGalaxyCreators">Dan Abnett; Andy Lanning</string>
    <string name="title_activity_team">Team</string>


    <string name="teamName">Team</string>
    <string name="teamCreators">Creators</string>
    <string name="title_activity_superhero">Superheroe</string>
    <string name="DefaultDescription">Lo sentimos, este héroe no tiene información, quizá está en un  archivo secreto de S.H.I.E.L.D</string>

    <drawable name="AvengersPicture"> </drawable>
</resources>
